[gd_scene load_steps=2 format=3 uid="uid://manager_tooltip_scene"]

[ext_resource type="Script" path="res://scripts/managers/manager_tooltip.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tooltip"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ManagerTooltip" type="PanelContainer"]
custom_minimum_size = Vector2(220, 0)
offset_right = 220.0
offset_bottom = 146.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tooltip")
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Manager Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuoteLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/italics_font_size = 12
bbcode_enabled = true
text = "[center][i]\"Quote\"[/i][/center]"
fit_content = true
scroll_active = false

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AbilityLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Ability Description"
autowrap_mode = 3
